Mission controller and model configuration & adaptation of mission index html

--- a/app/views/scripts/mission/index.phtml
+++ b/app/views/scripts/mission/index.phtml
@@ -1,102 +1,151 @@
-<form class="mx-auto space-y-1" action="#" method="POST">
-  <div class="min-h-full p-20 flex justify-center text-white">
-    <div class="flex flex-col flex-wrap max-w-lg w-full justify-center">
-      <div class="space-y-5">
-        <img class="mx-auto h-12" src="http://wavesforweirdos.com/wp-content/uploads/2022/01/wf-logo-white-1.png" alt="weirdofamily">
-        <h1 class="text-center text-4xl font-bold">Mission List</h1>
-      </div>
-      <div class="mt-10 input-group flex w-full drop-shadow-md">
-        <input type="search" class="relative block w-full px-5 py-2 rounded-l-2xl  focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600 placeholder-white font-normal text-xs tracking-wider" placeholder="Search by mission name...">
-        <button class="btn px-6 py-2.5 leading-tight rounded-r-2xl focus:outline-none focus:ring focus:ring-lime-500 bg-lime-700 hover:bg-lime-800 transition duration-150 ease-in-out flex items-center" type="button">
-          <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search" class="w-4" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-            <path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z">
-            </path>
-          </svg>
-        </button>
-      </div>
-      <div class="mt-5 w-full flex flex-auto justify-items-stretch py-5 gap-2">
+<?php
+
+$missionArray = $_SESSION['missionArray'];
+if (!is_array($missionArray)) {
+  $missionArray = [];
+}
+
+// echo '<pre>';
+// print_r($missionArray);
+// echo '</pre>';
+?>
+
+<!-- Listado de misiones -->
+
+
+<div class="mx-auto space-y-1 min-h-full p-20 flex justify-center text-white">
+  <div class="flex flex-col flex-wrap max-w-lg w-full justify-center">
+    <div class="space-y-5">
+      <img class="mx-auto h-12" src="http://wavesforweirdos.com/wp-content/uploads/2022/01/wf-logo-white-1.png" alt="weirdofamily">
+      <h1 class="text-center text-4xl font-bold">Mission List</h1>
+    </div>
+
+    <!-- (no funciona) Filtrado de misiones por nombre -->
+    <div class="mt-10 input-group flex w-full drop-shadow-md">
+      <input type="search" class="relative block w-full px-5 py-2 rounded-l-2xl  focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600 placeholder-white font-normal text-xs tracking-wider" placeholder="Search by mission name...">
+      <button id="searchmission" name="searchmission" class="btn px-6 py-2.5 leading-tight rounded-r-2xl focus:outline-none focus:ring focus:ring-lime-500 bg-lime-700 hover:bg-lime-800 transition duration-150 ease-in-out flex items-center" type="button">
+        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search" class="w-4" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+          <path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z">
+          </path>
+        </svg>
+      </button>
+    </div>
+
+    <!-- (no funciona) Filtrado de misiones segun status/starred -->
+    <form id="filter" method="POST">
+      <div class="mt-5 w-full flex justify-items-stretch py-5 gap-2">
         <div class="flex-1">
-          <button  id="username" name="username" type="submit" class="container mx-auto py-1 px-4 border border-transparent rounded-full drop-shadow-md text-sm font-medium text-lime-600 bg-white hover:bg-lime-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
+          <button id="allmission" name="allmission" type="submit" class="container mx-auto py-1 px-4 border border-transparent rounded-full drop-shadow-md text-sm font-medium text-lime-600 bg-white hover:bg-lime-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
             All
           </button>
         </div>
         <div class="flex-1">
-          <button  id="username" name="username" type="submit" class="container mx-auto py-1 px-4 border border-transparent rounded-full drop-shadow-md text-sm font-normal text-white bg-lime-600 hover:bg-lime-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
+          <button id="starred" name="starred" type="submit" class="container mx-auto py-1 px-4 border border-transparent rounded-full drop-shadow-md text-sm font-normal text-white bg-lime-600 hover:bg-lime-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
             Starred
           </button>
         </div>
         <div class="flex-1">
-          <button  id="username" name="username" type="submit" class="container mx-auto py-1 px-4 border border-transparent rounded-full drop-shadow-md text-sm font-normal text-white bg-lime-600 hover:bg-lime-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
+          <button id="trashed" name="trashed" type="submit" class="container mx-auto py-1 px-4 border border-transparent rounded-full drop-shadow-md text-sm font-normal text-white bg-lime-600 hover:bg-lime-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
             Trashed
           </button>
         </div>
         <div class="flex-1">
-          <button  id="username" name="username" type="submit" class="container mx-auto py-1 px-4 border border-transparent rounded-full drop-shadow-md text-sm font-normal text-white bg-lime-600 hover:bg-lime-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
+          <button id="completed" name="completed" type="submit" class="container mx-auto py-1 px-4 border border-transparent rounded-full drop-shadow-md text-sm font-normal text-white bg-lime-600 hover:bg-lime-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
             Completed
           </button>
         </div>
       </div>
-      <div class="space-y-3 w-full">
-        <div class="flex gap-7 px-5 py-3 items-center rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-00 bg-lime-900/90">
-          <div class="flex-3 text-2xl font-semibold">W</div>
-          <div class="flex-3 h-5 w-5 bg-yellow-500 rounded-full"></div>
-          <div class="flex-1 font-medium text-center ">First win of the day</div>
-          <div class="flex-none font-medium flex gap-2.5">
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-pen-to-square"></i>
-            <i class="fa-solid fa-check"></i>
-            <i class="fa-solid fa-xmark"></i>
-          </div>
-        </div>
-        <div class="flex gap-7 px-5 py-3 items-center rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-00 bg-lime-900/90">
-          <div class="flex-3 text-2xl font-semibold">B</div>
-          <div class="flex-3 h-5 w-5 bg-blue-500 rounded-full"></div>
-          <div class="flex-1 font-medium text-center ">Enter the Draconic Lands</div>
-          <div class="flex-none font-medium flex gap-2.5">
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-pen-to-square"></i>
-            <i class="fa-solid fa-check"></i>
-            <i class="fa-solid fa-xmark"></i>
-          </div>
-        </div>
-        <div class="flex gap-7 px-5 py-3 items-center rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-00 bg-lime-900/90">
-          <div class="flex-3 text-2xl font-semibold">V</div>
-          <div class="flex-3 h-5 w-5 bg-red-500 rounded-full"></div>
-          <div class="flex-1 font-medium text-center ">Kill 200 minions</div>
-          <div class="flex-none font-medium flex gap-2.5">
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-pen-to-square"></i>
-            <i class="fa-solid fa-check"></i>
-            <i class="fa-solid fa-xmark"></i>
-          </div>
-        </div>
-        <div class="flex gap-7 px-5 py-3 items-center rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-00 bg-lime-900/90">
-          <div class="flex-3 text-2xl font-semibold">Y</div>
-          <div class="flex-3 h-5 w-5 bg-red-500 rounded-full"></div>
-          <div class="flex-1 font-medium text-center ">Deal 40,000 damage to Champion</div>
-          <div class="flex-none font-medium flex gap-2.5">
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-pen-to-square"></i>
-            <i class="fa-solid fa-check"></i>
-            <i class="fa-solid fa-xmark"></i>
-          </div>
-        </div>
-        <div class="flex gap-7 px-5 py-3 items-center rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-00 bg-lime-900/90">
-          <div class="flex-3 text-2xl font-semibold">S</div>
-          <div class="flex-3 h-5 w-5 bg-lime-500 rounded-full"></div>
-          <div class="flex-1 font-medium text-center ">Heal 10,000 damage</div>
-          <div class="flex-none font-medium flex gap-2.5">
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-pen-to-square"></i>
-            <i class="fa-solid fa-check"></i>
-            <i class="fa-solid fa-xmark"></i>
-          </div>
-        </div>
+    </form>
 
+    <!-- Lista (en loop) de misiones -->
+    <div class="space-y-3 w-full">
+
+      <?php
+      if (isset($_SESSION['missionArray'])) {
+        foreach ($missionArray as $mission) {
+          $title = ucfirst($mission['title']);
+          $character = ucfirst($mission['character']);
+          $iCharacter = substr(($character), 0, 1); //muestra la primera inicial
+          $tag = $mission['tag'];
+
+          switch ($tag) {
+            case '0':
+              $color = 'red';
+              $text = 'Attack';
+              break;
+            case '1':
+              $color = 'lime';
+              $text = 'Defense';
+              break;
+            case '2':
+              $color = 'blue';
+              $text = 'Group';
+              break;
+            case '3':
+              $color = 'yellow';
+              $text = 'Daily';
+              break;
+          }
+
+          $end_date = $mission['end_date'];
+          $status = ucfirst($mission['status']);
+          $starred = $mission['starred'];
+
+          switch ($starred) {
+            case '0':
+              $star = 'regular';
+              break;
+            case '1':
+              $star = 'solid';
+              break;
+          }
+
+          $date_record = $mission['date_record'];
+
+
+      ?>
+          <form method="POST">
+            <div class="flex gap-7 px-5 py-3 items-center rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-00 bg-lime-900/90">
+              <!-- Input-hidden para recoger el value de mission -->
+              <!-- Character -->
+              <div class="flex-3 text-2xl font-semibold transition duration-100 ease-in-out" data-bs-toggle="tooltip" data-bs-html="true" title="<?php echo $character ?>"><?php echo $iCharacter ?></a></div>
+              <!-- Tag -->
+              <div class="flex-3 h-5 w-5 bg-<?php echo $color ?>-500 rounded-full transition duration-100 ease-in-out" data-bs-toggle="tooltip" title="<?php echo $text ?>"></div>
+              <!-- Character -->
+              <div class="flex-1 font-medium text-center "><?php echo $title ?></div>
+              <!-- (no funcionan) Operaciones -->
+              <div class="flex-none font-medium flex gap-2.5">
+                <input type="hidden" name="missionName" value="<?php echo $title ?>">
+                <button id="starred" name="starred" type="submit"><i class="fa-<?php echo $star ?> fa-star"></i></button>
+                <button id="edit" name="edit" type="submit"><i class="fa-regular fa-pen-to-square"></i></button>
+                <button id="complete" name="complete" type="submit"><i class="fa-solid fa-check"></i></button>
+                <button id="delete" name="delete" type="submit"><i class="fa-solid fa-xmark"></i></button>
+              </div>
+            </div>
+          </form>
+      <?php }
+      } ?>
+
+      <!-- Botón de confirmar añadir misión -->
+      <form method="POST">
         <div class="flex pt-10 place-content-center">
-          <button onclick="window.location.href='web/newmission.html'" type="submit" class="group relative flex justify-center py-2 px-8 border border-transparent rounded-full drop-shadow-md text-md font-semibold text-lime-600 bg-white hover:bg-lime-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
+          <button id="addmission" name="addmission" type="submit" class="group relative flex justify-center py-2 px-8 border border-transparent rounded-full drop-shadow-md text-md font-semibold text-lime-600 bg-white hover:bg-lime-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
             <i class="fas fa-plus"></i></button>
         </div>
-      </div>
+      </form>
     </div>
-</form>
+  </div>
+  </form>
+
+
+  <!-- Script de tooltip para mostrar character y tag completo -->
+  <!-- Required popper.js -->
+  <script src="https://unpkg.com/@popperjs/core@2.9.1/dist/umd/popper.min.js" charset="utf-8"></script>
+  <script type="text/javascript">
+    var tooltipTriggerList = [].slice.call(
+      document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    );
+    var tooltipList = tooltipTriggerList.map(function(tooltipTriggerEl) {
+      return new Tooltip(tooltipTriggerEl);
+    });
+  </script>
