--- a/app/views/scripts/mission/newmission.phtml
+++ b/app/views/scripts/mission/newmission.phtml
@@ -1,43 +1,75 @@
+<!-- Estructura de formulario para añadir una misión-->
 <div class="min-h-full p-20 flex justify-center text-white">
   <div class="max-w-lg w-full space-y-10 flex-col justify-center">
     <div class="space-y-5">
       <img class="mx-auto h-12" src="http://wavesforweirdos.com/wp-content/uploads/2022/01/wf-logo-white-1.png" alt="weirdofamily">
       <h1 class="text-center text-4xl font-bold">New Mission</h1>
     </div>
-    <form class="mx-auto max-w-lg space-y-1" action="#" method="POST">
+    <form class="mx-auto max-w-lg space-y-1" method="POST">
       <div class="space-y-5">
         <div class="space-y-2  text-white">
-          <label for="newMission" class="ml-5 font-medium"> A New Mission
-            Title</label>
-          <input id="newMission" name="newMission" type="text" required="" class="relative block w-full px-5 py-3 rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600 placeholder-white" placeholder="Come up with a task name...">
+          <label for="title" class="ml-5 font-medium"> A New Mission Title</label>
+          <input id="title" name="title" type="text" class="relative block w-full px-5 py-3 rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600 placeholder-white/30" placeholder="Come up with a task name...">
         </div>
         <div class="space-y-2">
-          <label for="username" class="ml-5 font-medium ">Assigned to</label>
-          <input id="username" name="username" type="text" autocomplete="username" required="" autofill class="relative block w-full px-5 py-3 rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600 placeholder-white" placeholder="Enter the username">
+          <label for="character" class="ml-5 font-medium ">Assigned to</label>
+          <input id="character" name="character" type="text" autocomplete="username" autofill class="relative block w-full px-5 py-3 rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600 placeholder-white/30" placeholder="Assign to a character">
         </div>
         <div class="space-y-2">
           <label for="tag" class="ml-5 font-medium">Tag</label>
-          <select id="tag" name="tag" type="tag" required unselect class="relative block w-full px-5 py-3 rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600 border-r-8 border-solid border-transparent">
-            <option selected disabled hidden class="text-white/30">Choose a tag</option>
-            <option class="" value="attack">🟠 Attack</option>
-            <option value="defense">🟢 Defense</option>
-            <option value="group">🔵 Group</option>
-            <option value="today">🟡 Daily</option>
+          <select id="tag" name="tag" type="tag" unselect class="relative block w-full px-5 py-3 rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600 border-r-8 border-solid border-transparent">
+            <option selected disabled hidden>Choose a tag</option>
+            <option value="0">🟠 Attack</option>
+            <option value="1">🟢 Defense</option>
+            <option value="2">🔵 Group</option>
+            <option value="3">🟡 Daily</option>
           </select>
         </div>
         <div class="space-y-2">
-          <label for="date-end" class="ml-5 font-medium ">Mission finish date</label>
-          <input id="date-end" name="date-end" placeholder="dd/mm/aaaa" type="text" required class="relative block w-full px-5 py-3 rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600 bg-nones placeholder-white">
+          <label for="end_date" class="ml-5 font-medium ">Mission finish date</label>
+          <input id="end_date" name="end_date" placeholder="dd/mm/aaaa" type="date" class="relative block w-full px-5 py-3 rounded-2xl drop-shadow-md focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600 bg-nones placeholder-white/30">
         </div>
       </div>
       <div class="flex pt-10 place-content-end space-x-4">
-        <button onclick="window.location.href='missionlist.html'" type="submit" class="w-32 group relative flex justify-center py-2 px-4 border border-transparent rounded-full drop-shadow-md text-md font-semibold text-white bg-lime-600 hover:bg-lime-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
+        <!-- Botón para cancelar operación  -->
+        <button id="cancel" name="cancel" type="submit" class="w-32 group relative flex justify-center py-2 px-4 border border-transparent rounded-full drop-shadow-md text-md font-semibold text-white bg-lime-600 hover:bg-lime-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
           Cancel
         </button>
-        <button onclick="window.location.href='missionlist.html'" type="submit" class="w-32 group relative flex justify-center py-2 px-4 border border-transparent rounded-full drop-shadow-md text-md font-semibold text-lime-600 bg-white hover:bg-lime-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
+        <!-- Botón para aceptar operación  -->
+        <button id="newMission" name="newMission" type="submit" class="w-32 group relative flex justify-center py-2 px-4 border border-transparent rounded-full drop-shadow-md text-md font-semibold text-lime-600 bg-white hover:bg-lime-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
           OK
         </button>
       </div>
     </form>
   </div>
+
+
+  <!-- Modal para informar que alguno de los campos no está completo  -->
+  <?php
+  $modal = 'hidden';
+  if (isset($_POST['newMission']) && (!empty($_POST['title']) || !empty($_POST['character']) || !empty($_POST['tag']) || !empty($_POST['end_date']))) {
+    $message = $_SESSION['error'];
+    $modal = '';
+  ?>
+    <div id="modal-input" class="modal fade fixed <?php echo $modal ?> mt-80 max-w-full h-full outline-none overflow-x-hidden overflow-y-auto transition-opacity" id="exampleModalCenter" tabindex="-1" aria-labelledby="exampleModalCenterTitle" aria-modal="true" role="dialog">
+      <div class="modal-dialog modal-dialog-centered relative w-auto pointer-events-none outline-none">
+        <div class="modal-content border-none outline-none shadow-lg relative flex flex-col w-full pointer-events-auto bg-white bg-clip-padding rounded-2xl outline-none text-current">
+          <!-- Modal header: botón para cerrar modal  -->
+          <button onclick="document.getElementById('modal-input').style.display='none'" type="button" class="modal-header relative flex flex-shrink-0 flex-wrap items-center justify-end mt-5 mx-5 text-green-900 text-sm font-semibold"><i class="fa-solid fa-xmark"></i></button>
+          <!-- Modal body: mensaje a mostrar  -->
+          <div class="modal-body relative mt-5 mx-10 text-green-900 text-lg font-semibold">
+            <p><?php echo $message;
+                unset($_SESSION['error']); ?></p>
+          </div>
+          <!-- Modal footer: botón OK  -->
+          <div class="modal-footer flex flex-shrink-0 flex-wrap items-center justify-center p-7 rounded-b-md">
+            <button onclick="document.getElementById('modal-input').style.display='none'" type="button" class="w-32 group relative flex justify-center py-2 px-4 border border-transparent rounded-full drop-shadow-md text-md font-semibold text-white bg-lime-600 hover:bg-lime-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
+              OK
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  <?php } ?>
+
 </div>
