--- a/app/views/scripts/user/index.phtml
+++ b/app/views/scripts/user/index.phtml
@@ -1,4 +1,4 @@
-<div class="min-h-full p-20 flex justify-center">
+<div class="min-h-full flex m-64 justify-center">
   <div class="max-w-lg w-full space-y-10 flex-col justify-center">
     <div class="space-y-5">
       <img class="mx-auto h-12" src="http://wavesforweirdos.com/wp-content/uploads/2022/01/wf-logo-white-1.png" alt="weirdofamily">
