--- a/app/views/scripts/user/index.phtml
+++ b/app/views/scripts/user/index.phtml
@@ -5,28 +5,29 @@
       <h1 class="text-center text-4xl font-bold text-white">Welcom to my weird family</h1>
     </div>
     <!-- Estructura de inicio de sesión-->
-    <form id="login-form" action="./" method="POST" class="mx-auto max-w-sm space-y-1">
+    <form id="login-form" method="POST" class="mx-auto max-w-sm space-y-1">
       <div class="space-y-5">
         <div class="space-y-2">
           <label for="username" class="ml-5 font-medium text-white">Username</label>
-          <input id="username" name="username" type="text" autocomplete="username" class="relative block w-full px-5 py-3 rounded-2xl drop-shadow-md placeholder-white/30 text-white focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600" placeholder="Enter your username" value="<?php if (isset($_POST['login'])) {  echo $_SESSION['username'];} else { echo "";} ?>">
+          <input id="username" name="username" type="text" autocomplete="username" class="relative block w-full px-5 py-3 rounded-2xl drop-shadow-md placeholder-white/30 text-white focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600" placeholder="Enter your username">
         </div>
         <div class="space-y-2">
           <label for="password" class="ml-5 font-medium text-white">Enter the password</label>
           <input id="password" name="password" type="password" autocomplete="current-password" class="relative block w-full px-5 py-3 rounded-2xl drop-shadow-md placeholder-white/30 text-white focus:outline-none focus:ring focus:ring-lime-500 bg-lime-600" placeholder="Enter your password">
         </div>
       </div>
+
       <div class="flex justify-end font-medium text-lime-600">
         <!--(no funciona) Botón para recordar contraseña -->
         <!-- <input type="submit" name="forgot" value="Forgot your password?" class="hover:text-lime-200"> -->
 
         <!-- Botón para registrarse  -->
-        <input type="submit" name="signin" value="Sign in" class="hover:text-lime-200">
+        <a href="signin" class="hover:text-lime-200">Sign in</a>
       </div>
 
       <!--Botón comprobar credenciales de usuario -->
       <div class="flex pt-10 place-content-center">
-        <input type="submit" name="login" value="Get started!" class="group relative flex justify-center py-2 px-4 border border-transparent rounded-full drop-shadow-md text-md font-semibold text-lime-600 bg-white hover:bg-lime-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
+        <button form="login-form" type="submit" name="login" class="group relative flex justify-center py-2 px-4 border border-transparent rounded-full drop-shadow-md text-md font-semibold text-lime-600 bg-white hover:bg-lime-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">Get started!</button>
       </div>
     </form>
   </div>
