--- a/app/views/scripts/user/signin.phtml
+++ b/app/views/scripts/user/signin.phtml
@@ -4,7 +4,7 @@
       <img class="mx-auto h-12" src="http://wavesforweirdos.com/wp-content/uploads/2022/01/wf-logo-white-1.png" alt="weirdofamily">
       <h1 class="text-center text-4xl font-bold text-white">A weirdo is signing up...</h1>
     </div>
-    <form id="singup-form" class="mx-auto max-w-sm space-y-1" action="#" method="POST">
+    <form id="singup-form" class="mx-auto max-w-sm space-y-1" method="POST">
       <div class="space-y-5">
         <div class="space-y-2">
           <label for="username" class="ml-5 font-medium text-white">Username</label>
