--- a/app/views/scripts/mission/index.phtml
+++ b/app/views/scripts/mission/index.phtml
@@ -164,22 +164,21 @@ if (!is_array($missionArray)) {
           </form>
       <?php }
       } ?>
+    </div>
 
+    <form method="POST">
       <!-- Botón de confirmar añadir misión -->
-      <form method="POST">
-        <div class="flex pt-10 place-content-center">
-          <button id="addmission" name="addmission" type="submit" class="group relative flex justify-center py-2 px-8 border border-transparent rounded-full drop-shadow-md text-md font-semibold text-lime-600 bg-white hover:bg-lime-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
-            <i class="fas fa-plus"></i></button>
-        </div>
-      </form>
-      </form>
-    </div>
-    <!-- Enlace para cerrar sesión -->
-    <div class="flex justify-center items-center gap-5 mt-32 text-white/70 font-semibold text-sm hover:text-lime-200">
-      <a href="logout">Log out</a>
-      <div class=" text-center text-bold text-3xl">·</div>
-      <button id="deletemissions" name="deletemissions" type="submit">Delete all missions</button>
-    </div>
+      <div class="flex pt-10 place-content-center">
+        <button id="addmission" name="addmission" type="submit" class="group relative flex justify-center py-2 px-8 border border-transparent rounded-full drop-shadow-md text-md font-semibold text-lime-600 bg-white hover:bg-lime-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-lime-300">
+          <i class="fas fa-plus"></i></button>
+      </div>
+      <!-- Enlace para cerrar sesión -->
+      <div class="flex justify-center items-center gap-5 mt-32 text-white/70 font-semibold text-sm hover:text-lime-200">
+        <div><a href="logout">Log out</a></div>
+        <div class="text-center text-bold text-3xl">·</div>
+        <div><button id="deleteAll" name="deleteAll" type="submit">Delete all missions</button></div>
+      </div>
+    </form>
   </div>
 
 </div>
